fix(mobile): remove content overflowing, go fullscreen when mobile

--- a/src/styles/base/overlay.scss
+++ b/src/styles/base/overlay.scss
@@ -68,7 +68,9 @@ $mr-mobile: 3.25rem;
     }
   }
   &__wrap {
-    @apply absolute top-0 left-0 right-0 bottom-0;
+    @apply absolute top-0 left-0 right-0 bottom-0 overflow-hidden;
+    max-width: "100%";
+    max-height: "100%";
     z-index: 0;
     // &:hover {
     //   .bg-overlay-frame {
@@ -86,7 +88,6 @@ $mr-mobile: 3.25rem;
       bottom: 0;
       right: 0;
       content: "";
-
     }
   }
   &__blur {
